--- a/AI-based-legal-advisor/package.json
+++ b/AI-based-legal-advisor/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
+    "nodemon": "^3.1.9",
     "react-router-dom": "^7.4.1",
     "socket.io": "^4.8.1",
     "tailwindcss": "^4.1.2"
